@@ -1,15 +1,31 @@
+/*
+ * Copyright (C) 2024 Hedera Hashgraph, LLC
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 package com.hedera.services.yahcli.commands.nodes;
 
 import static com.hedera.services.yahcli.output.CommonMessages.COMMON_MESSAGES;
-import static com.hedera.services.yahcli.suites.CreateSuite.NOVELTY;
 
 import com.hedera.services.bdd.spec.HapiSpec;
-import com.hedera.services.bdd.suites.HapiSuite;
-import com.hedera.services.yahcli.commands.accounts.SendCommand;
+import com.hedera.services.bdd.spec.utilops.inventory.AccessoryUtils;
 import com.hedera.services.yahcli.config.ConfigUtils;
-import com.hedera.services.yahcli.suites.CreateSuite;
 import com.hedera.services.yahcli.suites.DeleteNodeSuite;
+import edu.umd.cs.findbugs.annotations.NonNull;
+import edu.umd.cs.findbugs.annotations.Nullable;
 import java.io.File;
+import java.util.Optional;
 import java.util.concurrent.Callable;
 import picocli.CommandLine;
 
@@ -18,44 +34,67 @@ import picocli.CommandLine;
         subcommands = {CommandLine.HelpCommand.class},
         description = "Delete a node")
 public class DeleteCommand implements Callable<Integer> {
-    private static final int DEFAULT_NUM_RETRIES = 5;
-
     @CommandLine.ParentCommand
     NodesCommand nodesCommand;
 
     @CommandLine.Option(
             names = {"-n", "--nodeId"},
-            paramLabel = "node Id for deletion")
+            paramLabel = "node id for deletion")
     String nodeId;
 
     @CommandLine.Option(
-            names = {"-r", "--retries"},
-            paramLabel = "Number of times to retry on BUSY")
-    Integer boxedRetries;
+            names = {"-k", "--adminKey"},
+            paramLabel = "path to the admin key to use")
+    @Nullable
+    String adminKeyPath;
 
     @Override
     public Integer call() throws Exception {
         final var yahcli = nodesCommand.getYahcli();
         var config = ConfigUtils.configFrom(yahcli);
+        final var targetId = validatedNodeId(nodeId);
 
-        final var effectiveNodeId = nodeId != null ? nodeId : "";
-        final var retries = boxedRetries != null ? boxedRetries.intValue() : DEFAULT_NUM_RETRIES;
+        if (adminKeyPath == null) {
+            COMMON_MESSAGES.warn("No --adminKey option, payer signature alone must meet signing requirements");
+        } else {
+            validateAdminKeyLoc(adminKeyPath);
+        }
 
-        final var delegate = new DeleteNodeSuite(
-                config.asSpecConfig(), effectiveNodeId, retries);
+        final var delegate = new DeleteNodeSuite(config.asSpecConfig(), targetId, adminKeyPath);
         delegate.runSuiteSync();
 
-        if (delegate.getFinalSpecs().get(0).getStatus() == HapiSpec.SpecStatus.PASSED) {
-            COMMON_MESSAGES.info("SUCCESS - node Id "
-                    + effectiveNodeId
-                    + " has been deleted");
+        if (delegate.getFinalSpecs().getFirst().getStatus() == HapiSpec.SpecStatus.PASSED) {
+            COMMON_MESSAGES.info("SUCCESS - node" + nodeId + " has been deleted");
         } else {
-            COMMON_MESSAGES.warn("FAILED to delete node Id "
-                    + effectiveNodeId);
+            COMMON_MESSAGES.warn("FAILED to delete node" + nodeId);
             return 1;
         }
 
         return 0;
     }
 
+    private void validateAdminKeyLoc(@NonNull final String adminKeyPath) {
+        final Optional<File> adminKeyFile;
+        try {
+            adminKeyFile = AccessoryUtils.keyFileAt(adminKeyPath.substring(0, adminKeyPath.lastIndexOf('.')));
+        } catch (Exception e) {
+            throw new CommandLine.ParameterException(
+                    nodesCommand.getYahcli().getSpec().commandLine(),
+                    "Could not load a key from '" + adminKeyPath + "' (" + e.getMessage() + ")");
+        }
+        if (adminKeyFile.isEmpty()) {
+            throw new CommandLine.ParameterException(
+                    nodesCommand.getYahcli().getSpec().commandLine(),
+                    "Could not load a key from '" + adminKeyPath + "'");
+        }
+    }
+
+    private long validatedNodeId(@NonNull final String nodeId) {
+        try {
+            return Long.parseLong(nodeId);
+        } catch (Exception e) {
+            throw new CommandLine.ParameterException(
+                    nodesCommand.getYahcli().getSpec().commandLine(), "Invalid node id '" + nodeId + "'");
+        }
+    }
 }
